2014-12-05  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-mtn.el (vc-mtn-root):
	* vc/vc-svn.el (vc-svn-registered): Make FILE absolute.

2014-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-smie-sh-rules): Go back to the beginning
	of the whole pipe when indenting an opening keyword after a |.
	Generalize this treatment to opening keywords like "while" (bug#18031).

2014-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (newline): Place the hook buffer-locally,
	to make sure it's first.

	* progmodes/prog-mode.el (prettify-symbols--compose-symbol):
	Fix handling of symbols with different syntax at beginning/end or with
	symbol rather than word syntax.

2014-12-05  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (line-move): If noninteractive, call line-move-1, not
	forward-line, since the former is compatible with line-move-visual
	both in terms of the column to which it moves and the return
	value.  (Bug#19211)

2014-12-05  Stephen Berman  <stephen.berman@gmx.net>
2014-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/ediff-init.el (ediff-odd-p): Remove.
	(ediff-background-face): Use cl-oddp instead.
	(ediff-buffer-live-p): Make it a defsubst.

	* tooltip.el (tooltip-region-active-p): Remove.

	* net/shr.el (shr-char-breakable-p, shr-char-kinsoku-bol-p)
	(shr-char-kinsoku-eol-p, shr-char-nospace-p): Use define-inline.

	* fringe.el (fringe-bitmap-p): Make it a plain function.

	* emacs-lisp/eieio-core.el: Prefer inlinable functions over macros.
	(class-p, generic-p, eieio-object-p, class-abstract-p):
	Make them defsubst, so as to avoid corner case problems where
	the arg might be evaluated in the condition-case, or it can't be passed
	to higher-order functions like `cl-some'.

2014-12-05  Nicolas Richard  <theonewiththeevillook@yahoo.fr>

	* wid-edit.el (widget-choose): Let numeric keypad work (bug#19268)
	and remove old menu-related code.

2014-12-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>
